<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:background="@drawable/top_action_bar_scrim"
    android:paddingStart="@dimen/spacing_small"
    android:paddingEnd="@dimen/spacing_small">

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:contentDescription="@string/shared_btn_back"
        android:padding="@dimen/spacing_normal"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/flash_button"
        android:contentDescription="@string/gallery_button"
        android:padding="@dimen/spacing_normal"
        app:srcCompat="@drawable/ic_gallery" />

    <ImageView
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/flash_button"
        android:padding="@dimen/spacing_normal"
        app:srcCompat="@drawable/ic_flash_off" />

</RelativeLayout>
