<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CameraFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <SurfaceView
                    android:id="@+id/surfaceView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <View
                    android:id="@+id/cameraFrameView"
                    android:layout_width="227dp"
                    android:layout_height="202dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_viewfinder" />
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_weight="0.75"
                android:visibility="gone">

                <TextView
                    android:id="@+id/scanner_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanner_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/scanner_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/scanner_content" />

                <TextView
                    android:id="@+id/textViewTypeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_micro"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@+id/textViewType"
                    app:layout_constraintTop_toBottomOf="@+id/scanner_content" />

                <TextView
                    android:id="@+id/textViewContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/scanner_value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewType" />

                <TextView
                    android:id="@+id/textViewContentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginStart="@dimen/spacing_micro"
                    android:textColor="@color/teal_700"
                    android:textStyle="italic"
                    app:layout_constraintStart_toEndOf="@+id/textViewContent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewType" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:layout_marginEnd="@dimen/spacing_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/shareButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <include
            android:id="@+id/actionBarCamera"
            layout="@layout/top_action_bar_in_live_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>